You tell me what a, "Feature Set" is, because I have no idea.

--- a/dada/extras/documentation/pod_source/features.pod
+++ b/dada/extras/documentation/pod_source/features.pod
@@ -1,6 +1,6 @@
 =pod
 
-=head1 Dada Mail Feature Set Overview
+=head1 Dada Mail Features Overview
 
 This document attempt to list all the features in Dada Mail for review of the program and what have you. 
 
