--- a/dada/extras/documentation/pod_source/features-list_control_panel.pod
+++ b/dada/extras/documentation/pod_source/features-list_control_panel.pod
@@ -37,7 +37,7 @@ Logging into the Dada Mail Root Password will allow you full access to all List 
 
 Entire screens may be disabled, when someone logs in, using the List Password. But, these screens will always be available, when you log into a mailing list, using the Dada Mail Root Password. By default, links to these disabled screens will appear greyed out in the left hand side menu. 
 
-You may change which screens are disabled right in the List Control Panel, under, B<Your List Control Panel - Enable/Disable Features> - make sure to first log into the mailing list with the Dada Mail Root Password! 
+You may change which screens are disabled right in the List Control Panel, under, B<Control Panel Settings - Enable/Disable Features> - make sure to first log into the mailing list with the Dada Mail Root Password! 
 
 By default, the following List Control Panel screens are disabled, when you log in, with the List Password: 
 
@@ -57,11 +57,11 @@ This screen also has an option to allow importing a mailing list, without requir
 
 =item * Your Mailing List - Delete This Mailing List
 
-=item * Your List Control Panel
+=item * Control Panel Settings
 
-=item * Your List Control Panel - Enable/Disable Features
+=item * Control Panel Settings - Enable/Disable Features
 
-=item * Your List Control Panel - Options
+=item * Control Panel Settings - Options
 
 =item * Plugins 
 
